added comments for more clarity

--- a/ML_Problem_1.ipynb
+++ b/ML_Problem_1.ipynb
@@ -28,7 +28,7 @@
       "metadata": {
         "id": "3UFi5pw44gHF",
         "colab_type": "code",
-        "outputId": "4810d7d5-7462-48b6-9ab4-b531cd86b737",
+        "outputId": "6ca4cd5a-d017-492b-b21c-cd3cb9298a40",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -43,7 +43,7 @@
         "\n",
         "(train_images_original, train_labels_original), (test_images_original, test_labels_original) = mnist.load_data()"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "jXW4rjttWjmh",
         "colab_type": "code",
-        "outputId": "f7653cb7-502a-4fe4-fad3-6041ba5e63fd",
+        "outputId": "1ddc6730-1662-46e2-f1b8-d1bda8e72d6c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -78,7 +78,7 @@
       "source": [
         "train_images_original.shape, train_labels_original, test_images_original.shape, test_labels_original.shape"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -93,7 +93,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 3
         }
       ]
     },
@@ -128,17 +128,17 @@
       "metadata": {
         "id": "K5imu-EeMP7s",
         "colab_type": "code",
+        "outputId": "32294539-6b91-4666-9447-126b51d42402",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "db3458ba-3338-45c7-af2d-7b26d5ce1f3b"
+        }
       },
       "cell_type": "code",
       "source": [
         "train_images.shape"
       ],
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -150,7 +150,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 8
         }
       ]
     },
@@ -161,7 +161,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "**Preparing the train labels ( coverting intergers to binary)**"
+        "**Preparing the train labels ( converting intergers to binary)**"
       ]
     },
     {
@@ -195,7 +195,7 @@
       "metadata": {
         "id": "UM7GoBRgWtR9",
         "colab_type": "code",
-        "outputId": "2166fb85-f3d7-41c5-83cd-d834c9ebf65c",
+        "outputId": "c14f746e-70fe-4574-e8e1-f88a6331c50b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -205,7 +205,7 @@
       "source": [
         "train_images.shape, train_labels.shape, test_images.shape, test_labels.shape"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -219,6 +219,16 @@
           },
           "execution_count": 6
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "1UdB638kqqgw",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "**Initialize the parameters weight,bias,batch size and learning rate for training the data set**"
       ]
     },
     {
@@ -263,6 +273,7 @@
         "  return z\n",
         "\n",
         "\n",
+        "#input to the function (our algorithm’s prediction using Logistic regression  e.g. wx + b)\n",
         "def sigmoid(x): \n",
         "  z = 1/(1+np.exp(-x))\n",
         "  return z\n",
@@ -295,7 +306,7 @@
       "metadata": {
         "id": "IaSda0dWnK-W",
         "colab_type": "code",
-        "outputId": "d7ba5157-656e-44ca-a1cf-3292e02dd2ac",
+        "outputId": "90777a0a-e249-4ba1-fa91-e746a60bb863",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -320,12 +331,12 @@
         "print('Accuracy:', acc)\n",
         "print('classifier with the strongest output is:', np.argmax(listofmax))"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Accuracy: 90.19\n",
+            "Accuracy: 90.2\n",
             "classifier with the strongest output is: 7\n"
           ],
           "name": "stdout"
