Updating the code for 10 classifiers

--- a/ML_Problem_1.ipynb
+++ b/ML_Problem_1.ipynb
@@ -28,7 +28,7 @@
       "metadata": {
         "id": "3UFi5pw44gHF",
         "colab_type": "code",
-        "outputId": "6ca4cd5a-d017-492b-b21c-cd3cb9298a40",
+        "outputId": "fec318d4-41e5-4824-f51b-577dcd348c59",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -38,12 +38,13 @@
       "source": [
         "import keras\n",
         "from keras.datasets import mnist\n",
+        "from keras.utils import to_categorical\n",
         "import numpy as np\n",
         "import matplotlib as plt\n",
         "\n",
         "(train_images_original, train_labels_original), (test_images_original, test_labels_original) = mnist.load_data()"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -68,7 +69,7 @@
       "metadata": {
         "id": "jXW4rjttWjmh",
         "colab_type": "code",
-        "outputId": "1ddc6730-1662-46e2-f1b8-d1bda8e72d6c",
+        "outputId": "b1beb8e9-befe-4fbe-ca9b-b1be3eb41ac8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -78,7 +79,7 @@
       "source": [
         "train_images_original.shape, train_labels_original, test_images_original.shape, test_labels_original.shape"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -93,7 +94,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 2
         }
       ]
     },
@@ -104,7 +105,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "**Preparing the image data**"
+        "**Preparing the image data by reshaping and flattening**"
       ]
     },
     {
@@ -117,9 +118,14 @@
       "source": [
         "train_images = train_images_original.reshape((60000, 28 * 28))\n",
         "train_images = train_images.astype('float32') / 255\n",
+        "train_images = train_images.T\n",
         "\n",
         "test_images = test_images_original.reshape((10000, 28 * 28))\n",
-        "test_images = test_images.astype('float32') / 255"
+        "test_images = test_images.astype('float32') / 255\n",
+        "test_images = test_images.T\n",
+        "\n",
+        "train_labels_original = train_labels_original.T\n",
+        "test_labels_original = test_labels_original.T\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -128,29 +134,37 @@
       "metadata": {
         "id": "K5imu-EeMP7s",
         "colab_type": "code",
-        "outputId": "32294539-6b91-4666-9447-126b51d42402",
+        "outputId": "716f0892-9f82-436f-8020-0bda67b555ed",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 52
         }
       },
       "cell_type": "code",
       "source": [
-        "train_images.shape"
+        "print(train_images.shape[0])\n",
+        "train_labels_original.shape"
       ],
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "784\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(60000, 784)"
+              "(60000,)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 4
         }
       ]
     },
@@ -172,11 +186,8 @@
       },
       "cell_type": "code",
       "source": [
-        "from keras.utils import to_categorical\n",
-        "\n",
-        "train_labels = to_categorical(train_labels_original,10)\n",
-        "test_labels = to_categorical(test_labels_original,10)\n",
-        "y_verify = test_labels_original\n"
+        "predict_train_labels_original = to_categorical(train_labels_original,10)\n",
+        "predict_test_labels_original = to_categorical(test_labels_original,10)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -195,31 +206,14 @@
       "metadata": {
         "id": "UM7GoBRgWtR9",
         "colab_type": "code",
-        "outputId": "c14f746e-70fe-4574-e8e1-f88a6331c50b",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
-        "train_images.shape, train_labels.shape, test_images.shape, test_labels.shape"
+        "#train_images.shape, train_labels.shape, test_images.shape, test_labels.shape"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "((60000, 784), (60000, 10), (10000, 784), (10000, 10))"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
-        }
-      ]
+      "outputs": []
     },
     {
       "metadata": {
@@ -228,7 +222,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "**Initialize the parameters weight,bias,batch size and learning rate for training the data set**"
+        "**Initialize the parameters epochs,batch size and learning rate for training the data set**"
       ]
     },
     {
@@ -239,12 +233,12 @@
       },
       "cell_type": "code",
       "source": [
-        "weight = np.random.randn(10,784)*0.01\n",
-        "bias = np.random.randn(10,1)*0.01\n",
+        "#weight = np.random.randn(10,784)*0.01\n",
+        "#bias = np.random.randn(10,1)*0.01\n",
         "\n",
-        "lr = 0.005\n",
-        "batch_size = 8\n",
-        "epochs = 100"
+        "learn_rate = 0.1\n",
+        "batch_size = 50\n",
+        "epochs = 12"
       ],
       "execution_count": 0,
       "outputs": []
@@ -267,27 +261,78 @@
       },
       "cell_type": "code",
       "source": [
-        "def logistic_regression(weight,x,bias):\n",
-        "  y = np.dot(weight,np.transpose(x)) + (bias)\n",
-        "  z = sigmoid(y)\n",
-        "  return z\n",
+        "def initialize_zeros(size):\n",
+        "   w = np.zeros(shape=(size, 1))\n",
+        "   b = 0\n",
+        "   return w,b\n",
+        "  \n",
+        "  \n",
+        "#Logistic Regression using Mean Squared Error Loss\n",
+        "\n",
+        "def mean_square_loss_function(weight,bias,x,y):\n",
+        "  z = np.dot(np.transpose(weight),x) + (bias)\n",
+        "  activation = sigmoid(z)\n",
+        "  loss_value = np.mean((y - activation)**2)\n",
+        "  \n",
+        "  #computing gradient wrt weight and wrt to bias\n",
+        "  dweight = (1 / batch_size) * np.dot(x, np.transpose(2 * (activation-y) * activation * (1-activation)))\n",
+        "  dbias = (1 / batch_size) * np.sum( 2 * (activation-y) * activation * (1-activation))\n",
+        "  gradient = {\"dweight\":dweight,\"dbias\":dbias }\n",
+        "  loss_value = np.squeeze(loss_value)\n",
+        "  \n",
+        "  return gradient,loss_value\n",
         "\n",
         "\n",
-        "#input to the function (our algorithm’s prediction using Logistic regression  e.g. wx + b)\n",
-        "def sigmoid(x): \n",
-        "  z = 1/(1+np.exp(-x))\n",
-        "  return z\n",
+        "#input to the sigmoid function (our algorithm’s prediction using Logistic regression  e.g. z= wx + b)\n",
+        "\n",
+        "def sigmoid(z): \n",
+        "  return 1/(1+np.exp(-z))\n",
+        "\n",
+        "def sigmoid_derivative(z):\n",
+        "  return sigmoid(z)*(1-sigmoid(z))\n",
+        "\n",
+        "  \n",
+        "# Implementing mini-batch stochastic gradient descent for back propogation\n",
+        "\n",
+        "def minibatchsgd(weight,bias,train_images,train_labels,epochs,learn_rate):\n",
+        "  loss_values = []\n",
+        "  for i in range(epochs):\n",
+        "    for batch in get_mini_batches(np.transpose(train_images), np.transpose(train_labels), batch_size):\n",
+        "      train_images_batch,train_labels_batch = batch\n",
+        "      gradient,loss_value = mean_square_loss_function(weight,bias,np.transpose(train_images_batch),np.transpose(train_labels_batch))\n",
+        "      gradient_weight =gradient[\"dweight\"]\n",
+        "      gradient_bias = gradient[\"dbias\"]\n",
+        "      weight = weight - learn_rate*gradient_weight\n",
+        "      bias = bias - learn_rate*gradient_bias\n",
+        "    loss_values.append(loss_value)\n",
+        "    \n",
+        "  initials = {\"weight\":weight,\"bias\":bias}\n",
+        "  gradients = {\"dweight\":gradient_weight ,\"dbias\":gradient_bias}\n",
+        "        \n",
+        "  return initials,gradients,loss_values\n",
         "\n",
         "\n",
-        "def minibatchsgd(weight,train_images,bias,train_labels,z,lr,batch_size):\n",
-        "  loss = np.sum(-(np.transpose(train_labels) - z), axis = 1, keepdims =True)/batch_size\n",
-        "  sigmoid_derivative = sigmoid(z)*(1-sigmoid(z))\n",
-        "  d_z = np.multiply(loss,sigmoid_derivative)\n",
-        "  gradient_weight = np.dot(d_z,train_images)\n",
-        "  gradient_bias = np.sum(d_z,axis=1,keepdims=True)\n",
-        "  weight = weight - lr*gradient_weight\n",
-        "  bias = bias - lr*gradient_bias\n",
-        "  return weight,bias"
+        "def get_mini_batches(train_images,train_labels,batch_size):\n",
+        "  for i in range(0, train_images.shape[0]- batch_size+1, batch_size):\n",
+        "    last_slice = slice(i, i + batch_size)\n",
+        "    yield train_images[last_slice],train_labels[last_slice]\n",
+        "    \n",
+        "\n",
+        "# normalizing and predicting the values\n",
+        "\n",
+        "def prediction(weight, bias, train_images):\n",
+        "  \n",
+        "   m = train_images.shape[1] \n",
+        "   labels_prediction = np.zeros((1, m)) \n",
+        "   weight = weight.reshape(train_images.shape[0], 1) \n",
+        "   activation = sigmoid(np.dot(weight.T, train_images) + bias)\n",
+        "  \n",
+        "   #normalizing the predicted values\n",
+        "   for i in range(activation.shape[1]):\n",
+        "      labels_prediction[0, i] = 1 if activation[0, i] > 0.5 else 0 \n",
+        "  \n",
+        "   return labels_prediction\n",
+        "  "
       ],
       "execution_count": 0,
       "outputs": []
@@ -306,38 +351,93 @@
       "metadata": {
         "id": "IaSda0dWnK-W",
         "colab_type": "code",
-        "outputId": "90777a0a-e249-4ba1-fa91-e746a60bb863",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "def networkmodel(train_images, train_labels_original, test_images, test_labels_original, learn_rate,epochs):\n",
+        "  \n",
+        "  for digit_classifier in range(0,10):\n",
+        "    #binary classification for one classifier_digit from 0 to 9\n",
+        "    modified_train_label = np.array(train_labels_original);\n",
+        "    modified_train_label = np.where(modified_train_label == digit_classifier, 1, 0)\n",
+        "      \n",
+        "    modified_test_label = np.array(test_labels_original);\n",
+        "    modified_test_label = np.where(modified_test_label == digit_classifier, 1, 0)\n",
+        "    \n",
+        "    #training the network model to obtain different weight and bias\n",
+        "    weight, bias = initialize_zeros(train_images.shape[0])\n",
+        "    initials,gradients,loss_values = minibatchsgd(weight, bias, train_images, modified_train_label, epochs, learn_rate)\n",
+        "    weight= initials[\"weight\"]\n",
+        "    bias=initials[\"bias\"]\n",
+        "    \n",
+        "    #based on trained weights and bias values we predict the labels\n",
+        "    train_labels_prediction = prediction(weight, bias, train_images)\n",
+        "    test_labels_prediction = prediction(weight,bias, test_images)\n",
+        "    \n",
+        "    predict_train_labels_original[:,[digit_classifier]] = train_labels_prediction.T\n",
+        "    predict_test_labels_original[:,[digit_classifier]] = test_labels_prediction.T\n",
+        "    \n",
+        "    # corresponding 0 to 9 train and test classifier accuracy\n",
+        "    print(\"Digit \" + str(digit_classifier) +\" train accuracy : {} %\".format(100 - np.mean(np.abs(train_labels_prediction - modified_train_label)) * 100))\n",
+        "    print(\"Digit \" + str(digit_classifier) +\" test accuracy : {} %\".format(100 - np.mean(np.abs(test_labels_prediction - modified_test_label)) * 100))\n",
+        "\n",
+        "     \n",
+        "  train_labels_original = keras.utils.to_categorical(train_labels_original, 10)\n",
+        "  test_labels_original = keras.utils.to_categorical(test_labels_original, 10)\n",
+        "  print(train_labels_original.shape)\n",
+        "  print(predict_train_labels_original.shape)\n",
+        "    \n",
+        "  # overall test and train classifier accuracy of the network\n",
+        "  print(\"Overall train accuracy: {} %\".format(100 - np.mean(np.abs(predict_train_labels_original - train_labels_original)) * 100))\n",
+        "  print(\"Overall test accuracy: {} %\".format(100 - np.mean(np.abs(predict_test_labels_original - test_labels_original)) * 100))\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "5uwKutVI-FUn",
+        "colab_type": "code",
+        "outputId": "4912a952-5eec-4344-e2f2-a1e631bea11d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 439
         }
       },
       "cell_type": "code",
       "source": [
-        "for j in range(epochs):\n",
-        "  for i in range(0, train_images.shape[0], batch_size):\n",
-        "    z = logistic_regression(weight,train_images[i:i+batch_size],bias)\n",
-        "    weight,bias = minibatchsgd(weight,train_images[i:i+batch_size],bias,train_labels[i:i+batch_size],z,lr,batch_size)\n",
-        "y_test_set = logistic_regression(weight,test_images,bias)\n",
-        "y_test_set = np.transpose(y_test_set)\n",
-        "listofmax = list()\n",
-        "for i in range(10000):\n",
-        "  listofmax.append(np.argmax(y_test_set[i]))\n",
-        "cnt = 0\n",
-        "for i in range(10000):\n",
-        "  if listofmax[i] == y_verify[i]:\n",
-        "    cnt += 1\n",
-        "acc = cnt/100\n",
-        "print('Accuracy:', acc)\n",
-        "print('classifier with the strongest output is:', np.argmax(listofmax))"
+        "classifier = networkmodel(train_images, train_labels_original, test_images, test_labels_original, learn_rate,epochs=20)"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Accuracy: 90.2\n",
-            "classifier with the strongest output is: 7\n"
+            "Digit 0 train accuracy : 99.205 %\n",
+            "Digit 0 test accuracy : 99.29 %\n",
+            "Digit 1 train accuracy : 99.19 %\n",
+            "Digit 1 test accuracy : 99.46 %\n",
+            "Digit 2 train accuracy : 98.135 %\n",
+            "Digit 2 test accuracy : 98.22 %\n",
+            "Digit 3 train accuracy : 97.76333333333334 %\n",
+            "Digit 3 test accuracy : 98.06 %\n",
+            "Digit 4 train accuracy : 98.395 %\n",
+            "Digit 4 test accuracy : 98.25 %\n",
+            "Digit 5 train accuracy : 97.56666666666666 %\n",
+            "Digit 5 test accuracy : 97.74 %\n",
+            "Digit 6 train accuracy : 98.84166666666667 %\n",
+            "Digit 6 test accuracy : 98.72 %\n",
+            "Digit 7 train accuracy : 98.53333333333333 %\n",
+            "Digit 7 test accuracy : 98.51 %\n",
+            "Digit 8 train accuracy : 96.16833333333334 %\n",
+            "Digit 8 test accuracy : 96.34 %\n",
+            "Digit 9 train accuracy : 96.74333333333334 %\n",
+            "Digit 9 test accuracy : 96.66 %\n",
+            "(60000, 10)\n",
+            "(60000, 10)\n",
+            "Overall train accuracy: 98.0541666969657 %\n",
+            "Overall test accuracy: 98.1249999254942 %\n"
           ],
           "name": "stdout"
         }
