Updating the code for 10 classifiers and clean up

--- a/ML_Problem_1.ipynb
+++ b/ML_Problem_1.ipynb
@@ -28,7 +28,7 @@
       "metadata": {
         "id": "3UFi5pw44gHF",
         "colab_type": "code",
-        "outputId": "fec318d4-41e5-4824-f51b-577dcd348c59",
+        "outputId": "c91fda14-24cb-4b02-e605-166a3b0536a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -69,7 +69,7 @@
       "metadata": {
         "id": "jXW4rjttWjmh",
         "colab_type": "code",
-        "outputId": "b1beb8e9-befe-4fbe-ca9b-b1be3eb41ac8",
+        "outputId": "c6d0bc8f-f862-4737-c122-10e2a60947f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -134,7 +134,7 @@
       "metadata": {
         "id": "K5imu-EeMP7s",
         "colab_type": "code",
-        "outputId": "716f0892-9f82-436f-8020-0bda67b555ed",
+        "outputId": "6dba348e-f8d0-427d-a869-be11c8b79289",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -142,7 +142,7 @@
       },
       "cell_type": "code",
       "source": [
-        "print(train_images.shape[0])\n",
+        "print(train_images.shape)\n",
         "train_labels_original.shape"
       ],
       "execution_count": 4,
@@ -150,7 +150,7 @@
         {
           "output_type": "stream",
           "text": [
-            "784\n"
+            "(784, 60000)\n"
           ],
           "name": "stdout"
         },
@@ -238,7 +238,7 @@
         "\n",
         "learn_rate = 0.1\n",
         "batch_size = 50\n",
-        "epochs = 12"
+        "epochs = 20"
       ],
       "execution_count": 0,
       "outputs": []
@@ -262,9 +262,9 @@
       "cell_type": "code",
       "source": [
         "def initialize_zeros(size):\n",
-        "   w = np.zeros(shape=(size, 1))\n",
-        "   b = 0\n",
-        "   return w,b\n",
+        "   weight = np.zeros(shape=(size, 1))\n",
+        "   bias = 0\n",
+        "   return weight,bias\n",
         "  \n",
         "  \n",
         "#Logistic Regression using Mean Squared Error Loss\n",
@@ -292,7 +292,7 @@
         "  return sigmoid(z)*(1-sigmoid(z))\n",
         "\n",
         "  \n",
-        "# Implementing mini-batch stochastic gradient descent for back propogation\n",
+        "#Implementing mini-batch stochastic gradient descent for back propogation\n",
         "\n",
         "def minibatchsgd(weight,bias,train_images,train_labels,epochs,learn_rate):\n",
         "  loss_values = []\n",
@@ -318,7 +318,7 @@
         "    yield train_images[last_slice],train_labels[last_slice]\n",
         "    \n",
         "\n",
-        "# normalizing and predicting the values\n",
+        "#normalizing and predicting the values\n",
         "\n",
         "def prediction(weight, bias, train_images):\n",
         "  \n",
@@ -351,11 +351,15 @@
       "metadata": {
         "id": "IaSda0dWnK-W",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 439
+        },
+        "outputId": "a284727e-7bd8-43cf-e5b6-e342ec64a4b1"
       },
       "cell_type": "code",
       "source": [
-        "def networkmodel(train_images, train_labels_original, test_images, test_labels_original, learn_rate,epochs):\n",
+        "# network model for 10 classifiers\n",
         "  \n",
         "  for digit_classifier in range(0,10):\n",
         "    #binary classification for one classifier_digit from 0 to 9\n",
@@ -374,6 +378,7 @@
         "    #based on trained weights and bias values we predict the labels\n",
         "    train_labels_prediction = prediction(weight, bias, train_images)\n",
         "    test_labels_prediction = prediction(weight,bias, test_images)\n",
+        "    #print(train_labels_prediction.shape)\n",
         "    \n",
         "    predict_train_labels_original[:,[digit_classifier]] = train_labels_prediction.T\n",
         "    predict_test_labels_original[:,[digit_classifier]] = test_labels_prediction.T\n",
@@ -392,24 +397,7 @@
         "  print(\"Overall train accuracy: {} %\".format(100 - np.mean(np.abs(predict_train_labels_original - train_labels_original)) * 100))\n",
         "  print(\"Overall test accuracy: {} %\".format(100 - np.mean(np.abs(predict_test_labels_original - test_labels_original)) * 100))\n"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "5uwKutVI-FUn",
-        "colab_type": "code",
-        "outputId": "4912a952-5eec-4344-e2f2-a1e631bea11d",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 439
-        }
-      },
-      "cell_type": "code",
-      "source": [
-        "classifier = networkmodel(train_images, train_labels_original, test_images, test_labels_original, learn_rate,epochs=20)"
-      ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
